kubenetes/nginx-ingress-service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30080
    - protocol: TCP
      port: 443
      targetPort: 443
#     nodePort: 30443
