kubenetes/svc-article.yml
# Article Frontend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: article-front
  template:
    metadata:
      labels:
        app: article-front
    spec:
      containers:
      - name: article-front-container
        image: seoga9/article-front:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: article-front
spec:
  selector:
    app: article-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# Article Backend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-back-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: article-back
  template:
    metadata:
      labels:
        app: article-back
    spec:
      containers:
      - name: article-back-container
        image: seoga9/article-back:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: article-back
spec:
  selector:
    app: article-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
