kubenetes/svc-main.yml
# Main Frontend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-front
  template:
    metadata:
      labels:
        app: main-front
    spec:
      containers:
      - name: main-front-container
        image: seoga9/main-front:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: main-front
spec:
  selector:
    app: main-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #     nodePort: 30080
  # type: NodePort
 
---
# Main Backend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-back
  template:
    metadata:
      labels:
        app: main-back
    spec:
      containers:
      - name: main-back-container
        image: seoga9/main-back:latest
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: main-back
spec:
  selector:
    app: main-back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  #     nodePort: 30500
  # type: NodePort
