kubenetes/svc-news.yml
# News Frontend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-front
  template:
    metadata:
      labels:
        app: news-front
    spec:
      containers:
      - name: news-front-container
        image: seoga9/news-front:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: news-front
spec:
  selector:
    app: news-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# News Backend Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-back-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-back
  template:
    metadata:
      labels:
        app: news-back
    spec:
      containers:
      - name: news-back-container
        image: seoga9/news-back:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: news-back
spec:
  selector:
    app: news-back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
