kubenetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: applemandarine.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-front
            port:
              number: 80
  - host: movie.applemandarine.store
    http:
      paths:
      - path: /movie
        pathType: Prefix
        backend:
          service:
            name: main-front
            port:
              number: 80
  # - host: article.applemandarine.store
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: article-front
  #           port:
  #             number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ingress-nginx-controller
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
